--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,7 @@ testem.log
 Thumbs.db
 
 # Backedn
-/src/Todo-Backend/obj
-/src/Todo-Backend/bin
+/src/Todo-Backend/Todo-Backend/obj
+/src/Todo-Backend/Todo-Backend/bin
+/src/Todo-Backend/Todo-Backend.Tests/obj
+/src/Todo-Backend/Todo-Backend.Tests/bin
