chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ Thumbs.db
 /src/Todo-Backend/Todo-Backend/bin
 /src/Todo-Backend/Todo-Backend.Tests/obj
 /src/Todo-Backend/Todo-Backend.Tests/bin
+src/Todo-Backend/Todo-Backend/Database/tasks.db-shm
+src/Todo-Backend/Todo-Backend/Database/tasks.db-wal
